--- a/local/home.css
+++ b/local/home.css
@@ -9,15 +9,22 @@
 #cont_img
 {
     width: 100%;
-    height: 100%;
+    height: 150%;
 }
 
 .text
 {
     /* background-color: #759eb6; */
+    font-family: 'Work Sans', sans-serif;
     font-size: large;
     text-align: center;
-    margin-top: 50px;
+    margin-top: 250px;
     padding-left: 50px;
     padding-right:30px ;
+}
+
+.container {
+    font-family: 'Courgette', cursive;
+    font-size: 25px;
+    color:black;
 }
