--- a/local/styles.css
+++ b/local/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #E5DCC3;
+    background-color: #A2D2FF;
     font-family: 'Work Sans', sans-serif;
     margin: 0;
     padding: 0;
