Main page updated

--- a/local/styles.css
+++ b/local/styles.css
@@ -1,5 +1,6 @@
 body {
-    background-color: #E5DCC3;
+    
+    background-image: url('../img/soft-grid.jpg');
     font-family: 'Work Sans', sans-serif;
     margin: 0;
     padding: 0;
@@ -7,7 +8,7 @@ body {
 }
 
 .top {
-  background-color: #93B5C6;
+  background-image: url('../img/soft-grid.gif');
   margin: 0;
   padding: 0;
   width: auto;
@@ -24,4 +25,20 @@ hr {
 .parameters label {
     display: inline-block;
     width: 200px;
+}
+
+button {
+background-color:#FF00E4;
+border: #2e6da4; 
+font-family: 'Work Sans', sans-serif;
+font-size: 15px; 
+color: #fff; 
+letter-spacing: 1px; 
+padding: 8px 12px;
+font-size: 18px;
+font-weight: normal;
+border-radius: 25px;
+line-height: 1.5;
+text-decoration:none;
+margin: 15px;
 }
